infra/istio/authorization-policies.yaml
---
# In-mesh workloads can talk to data services (Postgres, Redis, Kafka, MinIO)
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: data-services-access
  namespace: idp-prod
spec:
  selector:
    matchLabels:
      tier: data
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - "cluster.local/ns/idp-prod/sa/default"
---
# Kong proxy accepts external traffic
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: kong-external-access
  namespace: idp-prod
spec:
  selector:
    matchLabels:
      app: kong
  action: ALLOW
  rules:
    - to:
        - operation:
            ports: ["8000", "8443"]
